# recodec

./: .gitignore  gradle.properties  settings.gradle
apiopencv/: CMakeLists.txt  build.gradle
apiopencv/src/androidTest/java/com/github/moqi/apiopencv/: ExampleInstrumentedTest.kt
apiopencv/src/main/: AndroidManifest.xml
apiopencv/src/main/cpp/: cvapi.cpp
apiopencv/src/main/java/com/github/moqi/apiopencv/: OpenCVApi.kt
apiopencv/src/main/res/values/: strings.xml
apiopencv/src/test/java/com/github/moqi/apiopencv/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/github/moqi/change/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/moqi/change/: MainActivity.kt
app/src/main/java/com/github/moqi/change/activities/: AboutActivity.kt  BaseActivity.kt  CameraActivity.kt  MainActivity.kt
app/src/main/java/com/github/moqi/change/adapter/: MainFuncAdapter.kt
app/src/main/java/com/github/moqi/change/beans/: FuncItemBean.kt
app/src/main/res/layout/: activity_about.xml  activity_camera.xml  activity_main.xml  item_main_func.xml  nav_header_main.xml
app/src/main/res/menu/: drawer_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/github/moqi/change/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libffmpeg/src/main/java/com/github/moqi/libffmpeg/: FFmpegApis.java
libmoqidebug/: build.gradle
libmoqidebug/src/main/java/com/github/moqi/libmoqidebug/: MoqiDebugConfig.java  MoqiDingTalk.java
(+7 files in other folders)
